# pamplemousse

./: .gitignore  CMakeLists.txt  README.md
include/: SDL2  SDL2_image
include/SDL2/: SDL_mixer.h
lib/: SDL2_image  SDL2_mixer
lib/SDL2_image/: libSDL2_image-2.0.0.dylib
lib/SDL2_image/cmake/SDL2_image/: sdl2_image-config.cmake
lib/SDL2_image/pkgconfig/: SDL2_image.pc
lib/SDL2_mixer/cmake/SDL2_mixer/: sdl2_mixer-config.cmake
lib/SDL2_mixer/pkgconfig/: SDL2_mixer.pc
lib/SDL2_ttf/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
lib/SDL2_ttf/pkgconfig/: SDL2_ttf.pc
src/: main.cpp  main_broken.cpp  main_old.cpp
